src/test/resources/testcases/invalid/functions/declare_before_use.tc
int main() {
    return foo(); // Error: foo is called before its definition
}
int foo() {
    return 1;
}
